@@ -60,6 +60,8 @@ Version 1.4.6 - CVS
     fields.
   - Load default value for INTERNALDATE sorting to be ON to match initial
     preference page if user has not set anything.
+  - E_NOTICE and unlink error message if user hits delete multiple times
+    before compose page has reloaded.
 
 Version 1.4.5 - 13 July 2005
 ----------------------------
